[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/SimpleBeat.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/expl1.wav" type="Sample" id=5]
[ext_resource path="res://audio/expl2.wav" type="Sample" id=6]
[ext_resource path="res://audio/expl3.wav" type="Sample" id=7]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="SampleLibrary" id=1]

samples/expl1 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 5 ) }
samples/expl2 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/expl3 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
centered = false

[node name="speed_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 573.0
margin/right = 72.0
margin/bottom = 587.0
text = "Speed:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shield_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 555.0
margin/right = 75.0
margin/bottom = 569.0
text = "Shield:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 425.797, 337.373 )

[node name="spawn_locations" type="Node" parent="."]

[node name="1" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 574.856, 131.901 )

[node name="2" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 516.942, 469.329 )

[node name="3" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 816.224, 267.994 )

[node name="4" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 172.767, 262.552 )

[node name="5" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 813.504, 463.888 )

[node name="6" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 148.281, 491.095 )

[node name="7" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 289.155, 178.822 )

[node name="8" type="Position2D" parent="spawn_locations"]

transform/pos = Vector2( 793.098, 77.5413 )

[node name="asteroid_container" type="Node" parent="."]

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="expl_sounds" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[node name="HUD" parent="." instance=ExtResource( 8 )]


